# EDA_and_NLP_test

./: .env  Dockerfile  README.md  pyproject.toml  test_ml.ipynb
.ipynb_checkpoints/: test_ml-checkpoint.ipynb
project/: app.py  utils.py
